--- a/package.json
+++ b/package.json
@@ -3,17 +3,45 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
+    "test": "npm run htmlhint && npm run prettier:write",
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "htmlhint": "npx htmlhint '**/*.html'",
+    "prettier:check": "npx prettier --check .",
+    "prettier:write": "npx prettier --write .",
+    "stylelint": "npx stylelint \"**/*.css\"",
+    "eslint": "npx eslint \"**/*.js\"",
+    "prepare": "husky install",
+    "storybook": "start-storybook -p 6006 --no-manager-cache",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "nanoid": "^3.3.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-is": "^18.0.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.9",
+    "@storybook/addon-actions": "^6.4.22",
+    "@storybook/addon-essentials": "^6.4.22",
+    "@storybook/addon-interactions": "^6.4.22",
+    "@storybook/addon-links": "^6.4.22",
+    "@storybook/react": "^6.4.22",
+    "@storybook/testing-library": "^0.0.10",
     "@vitejs/plugin-react": "^1.0.7",
+    "babel-loader": "^8.2.5",
+    "eslint": "^8.13.0",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-storybook": "^0.5.10",
+    "htmllint": "^0.8.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.4.0",
+    "prettier": "2.6.2",
+    "stylelint": "^14.7.0",
+    "stylelint-config-standard": "^25.0.0",
     "vite": "^2.9.0"
   }
 }
